--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
     </header>
 </div>
+<main>
 <section>
     <div class="flex1">
         <div class="team1">
@@ -70,6 +71,7 @@
     
 </div>
 </section>
+</main>
 <footer>
     <div class="footer">
         <div>
